--- a/skin/profile.css
+++ b/skin/profile.css
@@ -62,7 +62,7 @@ background-color: #4a6d8c;
 color: #000000;
 }
 
-#published { 
+#publishedStrip { 
 color: #FFFFFF;
 background: #4C6C8F; 
 }
@@ -76,7 +76,7 @@ text-align: center;
 color: #FFFFFF;
 }   
 
-#published { 
+#publishedStrip { 
 color: #ffffff;
 background: #4a6d8c; 
 }
