--- a/skin/screen.css
+++ b/skin/screen.css
@@ -16,10 +16,10 @@
 body {  margin: 0px 0px 0px 0px; font-family: Verdana, Helvetica, sans-serif; }
 
 h1     { font-size : 160%; margin: 0px 0px 0px 0px;  padding: 0px; }
-h2     { font-size : 140%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold;}
-h3     { font-size : 130%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : bold; }
+h2     { font-size : 140%; margin: 0.9em 0px 0px 0px; padding: 0px; font-weight : bold;}
+h3     { font-size : 130%; margin: 0.8em 0px 0px 0px; padding: 0px; font-weight : bold; }
 .h3 { margin: 22px 0px 3px 0px; }
-h4     { font-size : 120%; margin: 0px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
+h4     { font-size : 120%; margin: 0.7em 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
 .h4 { margin: 18px 0px 0px 0px; }
 h4.faq { font-size : 120%; margin: 18px 0px 0px 0px; padding: 0px; font-weight : bold;   text-align: left; }
 h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight : normal; text-align: left; }
@@ -28,23 +28,23 @@ h5     { font-size : 100%; margin: 14px 0px 0px 0px; padding: 0px; font-weight :
 * table
 */
 table .title { background-color: #000000; }
-.ForrestTable         { 
-    color: #ffffff; 
+.ForrestTable         {
+    color: #ffffff;
     background-color: #7099C5;
-    width: 100%; 
-    font-size : 100%; 
+    width: 100%;
+    font-size : 100%;
     empty-cells: show;
 }
-table caption { 
+table caption {
     padding-left: 5px;
     color: white;
-    text-align: left; 
-    font-weight: bold; 
+    text-align: left;
+    font-weight: bold;
     background-color: #000000;
 }
-.ForrestTable td { 
-    color: black;   
-    background-color: #f0f0ff; 
+.ForrestTable td {
+    color: black;
+    background-color: #f0f0ff;
 }
 .ForrestTable th { text-align: center; }
 /**
@@ -103,7 +103,7 @@ html>body #top .searchbox {
     z-index:0;
     background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
     background-repeat: no-repeat;
-    background-position: top left;    
+    background-position: top left;
     bottom: -1px; /* compensate for IE rendering issue */
 }
 
@@ -171,13 +171,13 @@ html>body #top .searchbox {
     background-repeat: no-repeat;
     background-position: top left;
 }
-#publishedStrip { 
+#publishedStrip {
     padding-right: 10px;
     padding-left: 20px;
     padding-top: 3px;
     padding-bottom:3px;
     color: #ffffff;
-    font-size : 60%; 
+    font-size : 60%;
     font-weight: bold;
     background-color: #4C6C8F;
     text-align:right;
@@ -185,7 +185,7 @@ html>body #top .searchbox {
 
 #level2tabs {
 margin: 0;
-float:left; 
+float:left;
 position:relative;
 }
 
@@ -211,7 +211,7 @@ position:relative;
 /**
 * Round corner
 */
-#roundtop { 
+#roundtop {
     background-image: url(images/rc-t-r-15-1body-2menu-3menu.png);
     background-repeat: no-repeat;
     background-position: top right;
@@ -230,10 +230,10 @@ img.corner {
    display: block !important;
 }
 
-.roundtopsmall { 
+.roundtopsmall {
     background-image: url(images/rc-t-r-5-1header-2searchbox-3searchbox.png);
     background-repeat: no-repeat;
-    background-position: top right;    
+    background-position: top right;
 }
 
 #roundbottomsmall {
@@ -262,14 +262,14 @@ img.cornersmall {
     float: left;
     width: 160px;
     padding-top: 0px;
-    top:-18px; 
-    left:10px; 
+    top:-18px;
+    left:10px;
     z-index: 20;
     background-color: #f90;
-    font-size : 70%;    
+    font-size : 70%;
 }
 
-.menutitle { 
+.menutitle {
         cursor:pointer;
         padding: 3px 12px;
         margin-left: 10px;
@@ -279,63 +279,63 @@ img.cornersmall {
         font-weight : bold;
 }
 
-#menu .menuitemgroup { 
-        margin: 0px 0px 6px 8px; 
-        padding: 0px;  
+#menu .menuitemgroup {
+        margin: 0px 0px 6px 8px;
+        padding: 0px;
         font-weight : bold; }
-        
-#menu .selectedmenuitemgroup{ 
-        margin: 0px 0px 6px 8px; 
-        padding: 0px;  
+
+#menu .selectedmenuitemgroup{
+        margin: 0px 0px 6px 8px;
+        padding: 0px;
         font-weight : bold; }
-        
-#menu .menuitem { 
-        padding: 0px 0px 2px 12px;  
+
+#menu .menuitem {
+        padding: 0px 0px 2px 12px;
         background-image: url('images/page.gif');
         background-repeat: no-repeat;
         background-position: center left;
-        font-weight : normal; 
+        font-weight : normal;
         margin-left: 10px;
 }
 
-#menu .menupage {         
-        margin: 5px 0px 5px 10px; 
-        padding: 0px 3px 0px 12px;  
+#menu .menupage {
+        margin: 5px 0px 5px 10px;
+        padding: 0px 3px 0px 12px;
         background-image: url('images/current.gif');
         background-repeat: no-repeat;
         background-position: top left;
         font-style : normal;
 }
-#menu .menupagetitle { 
-        padding: 0px 0px 0px 6px;     
+#menu .menupagetitle {
+        padding: 0px 0px 0px 6px;
         font-style : normal;
-        border-style: solid; 
+        border-style: solid;
         border-width: 1px;
         margin-right: 10px;
 }
-#menu .menupageitemgroup { 
-        padding: 3px 0px 4px 6px;    
+#menu .menupageitemgroup {
+        padding: 3px 0px 4px 6px;
         font-style : normal;
         border-bottom: 1px solid ;
         border-left: 1px solid ;
-        border-right: 1px solid ;        
+        border-right: 1px solid ;
         margin-right: 10px;
 }
-#menu .menupageitem {             
+#menu .menupageitem {
         font-style : normal;
-        font-weight : normal; 
+        font-weight : normal;
         border-width: 0px;
         font-size : 90%;
 }
 #menu #credit {
-    text-align: center;  
+    text-align: center;
 }
 
 #content {
     padding: 20px 20px 20px 180px;
     margin: 0;
-    font : small Verdana, Helvetica, sans-serif;  
-    font-size : 80%; 
+    font : small Verdana, Helvetica, sans-serif;
+    font-size : 80%;
 }
 
 #content ul {
@@ -396,7 +396,7 @@ acronym { cursor: help; }
 
 .trail {
   position: relative; /* IE bugfix cont'd */
-  font-size: 70%; 
+  font-size: 70%;
   text-align: right;
   float: right;
   margin: -10px 5px 0px 5px;
@@ -405,15 +405,15 @@ acronym { cursor: help; }
 
 #minitoc-area {
     border-top: solid 1px #4C6C8F;
-    border-bottom: solid 1px #4C6C8F;    
+    border-bottom: solid 1px #4C6C8F;
     margin-bottom: 15px;
     margin-left: 15px;
     margin-right: 10%;
     padding-bottom: 5px;
     padding-top: 5px;
 }
-.minitoc    { 
-    list-style-image: url('images/current.gif'); 
+.minitoc {
+    list-style-image: url('images/current.gif');
     font-weight: normal;
 }
 li p {
