--- a/src/core/context/skins/leather-dev/css/branding.css
+++ b/src/core/context/skins/leather-dev/css/branding.css
@@ -1,3 +1,18 @@
+/*
+* Copyright 2002-2004 The Apache Software Foundation
+*
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+*     http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*/
 #branding {
 /*Container used for a header and banner to brand the site.
 */
@@ -26,7 +41,7 @@ color: black;
 border-left: solid 1px black;
 border-right: solid 1px black;
 border-top: solid 1px black;
-padding: 0px 180px;
+padding: 0px 0px 0px 180px;
 font-size: 75%;
 z-index:10;
 }
@@ -56,8 +71,8 @@ float: right;
 */
 clear: both;
 padding-right: 10px;
-padding-top: 3px;
-padding-bottom:3px;
+padding-top: 2px;
+padding-bottom: 2px;
 color: #fff;
 font-size : 70%;
 font-weight: bold;
