implemented semantic container in leather
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@53770 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/context/skins/leather-dev/css/base-contracts.css
+++ b/src/core/context/skins/leather-dev/css/base-contracts.css
@@ -69,24 +69,26 @@ Search form container
 html>body .search-input {
 bottom: 0px;
 }
-
 .search-input {
 /*Related to search interface and search results
 */
-position: absolute;
-/*float:right;*/
-right: 10px;
+border: solid 1px black;
+clear: both;
+position: relative;
+float: right;
+top: -75px;
+/*right: 20px;*/
 height: 42px;
 font-size: 70%;
 white-space: nowrap;
-text-align: right;
+/*text-align: right;*/
 color: white;
 background-color: #000;
-z-index:0;
+z-index:100;
 background-image: url(images/rc-t-l-5-1header-2searchbox-3searchbox.png);
 background-repeat: no-repeat;
 background-position: top left;
-bottom: -1px; /* compensate for IE rendering issue */
+/*bottom: -1px; */ /* compensate for IE rendering issue */
 }
 
 .search-input form {
