Applying patch for issue http://issues.cocoondev.org/browse/FOR-377:
Displays link for TXT output.  Modified slightly from the patch attached
to issue FOR-377 (txtpod.png image is used rather than pdfdoc.png).

Also modified the CSS so that the image is displayed with a size of 16x16
size and placed properly as well.

This is only for the tigris skin at the moment.  Other skins will be
updated.  Need to look at the common XSLTs that are included.  I suspect
that the common includes are no longer common. :)



git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@76281 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/skins/tigris/css/tigris.css
+++ b/main/webapp/skins/tigris/css/tigris.css
@@ -864,6 +864,30 @@ td.filebrowse h3 {
     width: 16px;
 }
 
+.txtlink {
+    position: relative; /* IE bugfix cont'd */
+    float: right;
+    margin: 0px 5px;
+    padding: 0;
+}
+.txtlink br {
+    margin-top: -10px;
+    padding-left: 1px;
+}
+.txtlink a {
+    display: block;
+    font-size: 70%;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.txtlink img {
+    display: block;
+    height: 16px;
+    width: 16px;
+}
+
 .printlink {
     float: right;
 }
