Add 'footerLogo' class for footer w3c compliance logos
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@109428 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/skins/tigris/css/tigris.css
+++ b/main/webapp/skins/tigris/css/tigris.css
@@ -1,5 +1,5 @@
 /* $Id: tigris.css,v 1.9 2003/04/10 22:58:32 tfahrner Exp $
-	
+
 	This file defines basic default formatting for HTML conforming to Tigris application style. To extend or override these rules for your instance, edit inst.css instead of this file. */
 
 /* colors, backgrounds, borders, link indication */
@@ -595,6 +595,11 @@ th, td {
 	vertical-align: top;
 }
 
+.footerLogos  {
+	text-align: right;
+	vertical-align: middle;
+}
+
 .right {
 	text-align: right !important;
 }
@@ -890,6 +895,7 @@ td.filebrowse h3 {
 
 .printlink {
     float: right;
+    text-align: center;
 }
 .printlink br {
     margin-top: -10px;
