Handle row and col spans by using concatentate() rather than eval() pseudo-function.
Fixes http://issues.cocoondev.org/browse/FOR-421.  Thanks to Sjur N.
Moshagen for the patch.



git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@125956 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/xxe/css/common.css
+++ b/tools/xxe/css/common.css
@@ -200,10 +200,10 @@ tr {
 /* The table row description element */
 th, td {
     display: table-cell;
-    text-align: eval(attr(align));
-    vertical-align: eval(attr(valign));
-    row-span: eval(attr(rowspan));
-    column-span: eval(attr(colspan));    
+    text-align: concatenate(attr(align));
+    vertical-align: concatenate(attr(valign));
+    row-span: concatenate(attr(rowspan));
+    column-span: concatenate(attr(colspan));    
     border: 1 inset gray;
     padding: 2;
 }
