--- a/scratchpad/XXE-config/css/common.css
+++ b/scratchpad/XXE-config/css/common.css
@@ -200,10 +200,10 @@ tr {
 /* The table row description element */
 th, td {
     display: table-cell;
-    text-align: eval(attr(align));
-    vertical-align: eval(attr(valign));
-    row-span: eval(attr(rowspan));
-    column-span: eval(attr(colspan));    
+    text-align: concatenate(attr(align));
+    vertical-align: concatenate(attr(valign));
+    row-span: concatenate(attr(rowspan));
+    column-span: concatenate(attr(colspan));    
     border: 1 inset gray;
     padding: 2;
 }
