FOR-342 initial implementation using fbit plugin. Still some things missing.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158701 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/skins/leather-dev/css/basic.css
+++ b/main/webapp/skins/leather-dev/css/basic.css
@@ -1,45 +1,117 @@
-/*
-* Copyright 2002-2004 The Apache Software Foundation or its licensors,
-* as applicable.
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*     http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
-*/
-/**
- * General
- */
-
-img { border: 0; }
-
-#content table {
-	border: 0;
-	width: 100%;
+/*============HTML tags==========================*/
+body {
+	text-align:center;
+	font-family: verdana, helvetica, sans;
+	font-size: 8pt;
 }
-#content th,
-#content td {
-	margin: 0;
+img {border:0;}
+hr {border:0px; height: 1px; background-color:#ddd;}
+
+/*============Container and branding=============*/
+#container {
+	width: 750px;
+	text-align:left;
+	margin: 0 auto 12px auto;
+}
+#branding {
 	padding: 0;
-	vertical-align: top;
+	height: 75px;
+	max-height: 75px;
+	background: url(images/header-background.gif) transparent;
+	background-repeat: no-repeat;
+	position: relative;
+}/*
+#projectlogo {
+	height: 75px;
+	width: 0;
+	padding: 5px;
+	float: left;
+}
+#search {
+	padding: 8px;
+	float: right;
+	font-family: verdana, helvetica, sans;
+	font-size: 8pt;
+	font-weight: bold;
+	color: #ddddff;
+}
+#search input {
+	font-size: 8pt;
+	font-family: verdana, helvetica, sans;
+}*/
+#spacer {
+    clear:both;
 }
 
-.clearboth {
-	clear: both;
+/*============Sub-tabs===========================*/
+#nav-main-sub {
+	text-align: right;
+	margin-right: 20px;
 }
 
+/*============Main content=======================*/
+#content {
+	clear: none;
+	margin-left: 25%;
+	padding: 10px;
+	font-family: verdana, helvetica, sans;
+	font-size: 10pt;
+	max-width: 75%;
+}
+#content-pdf {
+	float: right;
+	text-decoration: none;
+}
+#content-pdf a {
+	text-decoration: none;
+}
+#content h1 {
+	font-weight: bold;
+	font-size: 16pt;
+	letter-spacing: 2px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	border-bottom: 2px solid #ddd;
+	color: #9AB;
+}
+#content h2 {
+	font-weight: bold;
+	font-size: 11pt;
+	letter-spacing: 1.5px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	border-bottom: 2px solid #ddd;
+	color: #567;
+	font-family: "Trebuchet MS", helvetica, sans
+}
+#content h3 {
+	font-weight: bold;
+	font-size: 10pt;
+	letter-spacing: 1px;
+	padding: 0;
+	margin: 0;
+	display: block;
+	border-bottom: 2px solid #ddd;
+	color: #567;
+	font-family: verdana, helvetica, sans
+}
+
+#content a {
+	text-decoration:underline;
+	color: #567;
+}
+#content a:hover {
+	text-decoration:none;
+	color: #678;
+}
+
+/*============Labels, fixme etc.=================*/
 .frame {
 	border: solid black 1px;
 	margin: 1em 3em;
 }
-
 .frame .label {
 	background: #369;
 	color: white;
@@ -65,78 +137,12 @@ img { border: 0; }
 	background: #C6C600;
 }
 
-/**
- * Typography
- */
-
-body {
-	font-family: verdana, "Trebuchet MS", arial, helvetica, sans-serif;
-	font-size: 100%;
+/*============Footer=============================*/
+#siteinfo {
+	text-align: center;
+	clear: both;
+	padding: 5px;
 }
-
-#content {
-	font-family: Georgia, Palatino, Times, serif;
-	font-size: 95%;
-}
-#tabs {
-	font-size: 70%;
-}
-#menu {
-	font-size: 80%;
-}
-#footer {
-	font-size: 70%;
-}
-
-h1, h2, h3, h4, h5, h6	{
-	font-family: "Trebuchet MS", verdana, arial, helvetica, sans-serif;
-	font-weight: bold;
-	margin-top: 1em;
-	margin-bottom: .5em;
-}
-
-h1 {
-    margin-top: 0;
-    margin-bottom: 1em;
-	font-size: 1.4em;
-}
-#content h1 {
-	font-size: 160%;
-	margin-bottom: .5em;
-}
-#menu h1 {
-	margin: 0;
-	padding: 10px;
-	background: #336699;
-	color: white;
-}
-h2 { font-size: 120%; }
-h3 { font-size: 100%; } 
-h4 { font-size: 90%; } 	
-h5 { font-size: 80%; }
-h6 { font-size: 75%; }
-
-p {
-	line-height: 170%;
-	text-align: left;
-	margin-top: .5em;
-	margin-bottom: 1em;
-}
-
-#content li,
-#content th,
-#content td {
-	line-height: 170%;
-}
-
-#content .attribution { 
-	text-align: right; 
-	font-style: italic; 
-	font-size: 85%;
-	margin-top: 1em;
-}
-
-.codefrag {
-	font-family: "Courier New", Courier, monospace;
-	font-size: 110%;
+#siteinfo p {
+	margin: 5px;
 }
