Added rudimentary Message of the Day facility. Only in pelt skin at this stage.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@158747 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/skins/pelt/css/screen.css
+++ b/main/webapp/skins/pelt/css/screen.css
@@ -404,6 +404,19 @@ acronym { cursor: help; }
   padding: 0;
 }
 
+#motd-area {
+    position: relative; /* IE bugfix cont'd */
+    float: right;
+    background-color: #f0f0ff;
+    border-top: solid 1px #4C6C8F;
+    border-bottom: solid 1px #4C6C8F;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 10%;
+    padding-bottom: 5px;
+    padding-top: 5px;
+}
+
 #minitoc-area {
     border-top: solid 1px #4C6C8F;
     border-bottom: solid 1px #4C6C8F;
@@ -417,6 +430,7 @@ acronym { cursor: help; }
     list-style-image: url('images/current.gif');
     font-weight: normal;
 }
+
 li p {
     margin: 0;
     padding: 0;
