Content consistent with other templates. Remove author tag.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@159981 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/xxe/template/document11.xml
+++ b/tools/xxe/template/document11.xml
@@ -3,14 +3,10 @@
 "http://forrest.apache.org/dtd/document-v11.dtd">
 <document>
   <header>
-    <title>Plantilla para Document DTD v11</title>
-
-    <authors>
-      <person email="jano-r@wanadoo.es" name="Alejandro Ramirez" />
-    </authors>
+    <title>Template for Document DTD v11</title>
   </header>
 
   <body>
-    <p>Esto es una plantilla.</p>
+    <p>This is a template.</p>
   </body>
 </document>
