Added a width attribute (set to 35%) for the motd-area.  The motd was clobbering the page toc a bit, so 35% seemed a reasonable compromise.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@160806 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/webapp/skins/pelt/css/screen.css
+++ b/main/webapp/skins/pelt/css/screen.css
@@ -407,6 +407,7 @@ acronym { cursor: help; }
 #motd-area {
     position: relative; /* IE bugfix cont'd */
     float: right;
+    width: 35%;
     background-color: #f0f0ff;
     border-top: solid 1px #4C6C8F;
     border-bottom: solid 1px #4C6C8F;
